update 1. 完成咨询页面设计 2. 抽取feature组件到component

--- a/src/features/common/component/App.less
+++ b/src/features/common/component/App.less
@@ -7,10 +7,9 @@
     .ant-layout-footer {
         text-align: center;
     }
-    
     .pcs-content {
-        padding: 24px;
         min-height: 800px;
+        display: flex;
+        justify-content: center;
     }
 }
-
