--- a/src/features/counseling/Counseling.less
+++ b/src/features/counseling/Counseling.less
@@ -1,3 +1,8 @@
+.number-color {
+    color: #f59900;
+    font-weight: 100;
+}
+
 .psc-counseling-wrapper {
     display: flex;
     flex-direction: row;
@@ -5,6 +10,7 @@
 
 .psc-counseling-newly-expert {
     width: 300px;
+    margin-left: -10px;
     .apply-button-wrapper {
         text-align: center;
     }
@@ -15,12 +21,10 @@
             letter-spacing: 2px;
         }
     }
-
-    .newly-expert {
-
-    }
 }
 
 .psc-counseling {
     margin-left: 20px;
+    position: relative;
+    top: -40px;
 }
