--- a/src/features/counseling/component/CounselingPanel.less
+++ b/src/features/counseling/component/CounselingPanel.less
@@ -1,7 +1,9 @@
-@import '../../styles/global.less';
+@import '~@src/styles/global.less';
 
 .counseling-panel {
-
+    .expert-list-wrapper {
+        margin-top: 30px;
+    }
 }
 
 .condition-panel {
@@ -12,6 +14,7 @@
     }
     .ant-menu {
         line-height: 60px;
+        width: 470px;
     }
     .condition-container {
         flex-grow: 1;
