--- a/src/features/counseling/component/NewlyExpert.less
+++ b/src/features/counseling/component/NewlyExpert.less
@@ -1,3 +1,5 @@
+@import '~@src/styles/global.less';
+
 .newly-expert {
     background-color: #ffffff;
     width: 300px;
@@ -33,10 +35,6 @@
         width: 60px;
         height: 60px;
     }
-    .number-color {
-        color: #f59900;
-        font-weight: 100;
-    }
     .ant-card-meta-detail {
         .ant-card-meta-title {
             height: 24px;
@@ -45,6 +43,7 @@
             .name {
                 color: #3169b0;
                 font-size: 16px;
+                font-weight: 400;
             }
             .rate {
                 float: right;
