add: 方框使用border-radius

--- a/src/features/counseling/component/CounselingPanel.less
+++ b/src/features/counseling/component/CounselingPanel.less
@@ -9,6 +9,7 @@
 .condition-panel {
     background-color: @bg-color-white;
     padding-right: 10px;
+    border-radius: @border-radius;
     .ant-tag {
         font-size: 14px;
     }
