--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -11,3 +11,6 @@
 // hover box shadow
 @box-shadow: 0 3px 3px -2px rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 1px 8px 0 rgba(0,0,0,.12);
 @box-shadow-transition: box-shadow .15s cubic-bezier(.4,0,.2,1);
+
+// border-radius
+@border-radius: 10px;
