--- a/src/features/counseling/Counseling.less
+++ b/src/features/counseling/Counseling.less
@@ -3,12 +3,12 @@
     font-weight: 100;
 }
 
-.psc-counseling-wrapper {
+.pcs-counseling-wrapper {
     display: flex;
     flex-direction: row;
 }
 
-.psc-counseling-newly-expert {
+.pcs-counseling-newly-expert {
     width: 300px;
     margin-left: -10px;
     .apply-button-wrapper {
@@ -23,7 +23,7 @@
     }
 }
 
-.psc-counseling {
+.pcs-counseling {
     margin-left: 20px;
     position: relative;
     top: -40px;
