--- a/src/features/article/component/PopularList.less
+++ b/src/features/article/component/PopularList.less
@@ -19,6 +19,11 @@
     }
 }
 
+.post-button {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .list-item {
     display: flex;
     margin-bottom: 5px;
