--- a/src/features/common/component/App.less
+++ b/src/features/common/component/App.less
@@ -6,16 +6,26 @@
         .ant-menu-item {
             padding: 0 30px;
         }
-        button.ant-btn {
+        .sign-button-group {
             position: absolute;
-            &:first-of-type {
-                right: 170px;
-                top: 25%;
+            top: 0;
+            right: 0;
+            .ant-btn:first-of-type {
+                right: 75px;
             }
-            &:last-of-type {
+            .ant-btn:last-of-type {
                 right: 50px;
-                top: 25%;
             }
+        }
+        .user-viewer {
+            position: absolute;
+            top: 0;
+            right: 80px;
+            display: flex;
+            align-items: center;
+            height: 100%;
+            justify-content: space-around;
+            width: 200px;
         }
     }
     .ant-layout-content {
