--- a/src/features/common/component/App.less
+++ b/src/features/common/component/App.less
@@ -26,6 +26,9 @@
             height: 100%;
             justify-content: space-around;
             width: 200px;
+            .ant-badge {
+                cursor: pointer;
+            }
         }
     }
     .ant-layout-content {
