custom: 一些新增和修改  * 1. feat: 咨询师列表API联调  * 2. refactor: 组件命名更改  * 3. feat: 增加API state的type checking  * 4. feat: 提取全局store, 适应分页接口页码自增  * 5. fix: error type checking for api response

--- a/src/features/counseling/component/NewlyCounselors.less
+++ b/src/features/counseling/component/NewlyCounselors.less
@@ -1,12 +1,12 @@
 @import '~@src/styles/global.less';
 
-.newly-expert {
+.newly-counselors{
     background-color: #ffffff;
     width: 300px;
     border-radius: @border-radius;
 }
 
-.newly-expert-header {
+.newly-counselors-header {
     padding: 5px 0 10px 20px;
     font-size: 16px;
     font-weight: 900;
@@ -15,7 +15,7 @@
     border-bottom: 1px solid #f0f2f5;
 }
 
-.newly-expert-footer {
+.newly-counselors-footer {
     font-size: 14px;
     height: 40px;
     line-height: 40px;
@@ -24,7 +24,7 @@
     color: #3169b0;
 }
 
-.newly-expert-content {
+.newly-counselors-content {
     .ant-card.ant-card-bordered {
         width: 300px;
         border: #fafafa solid 1px;
