--- a/src/features/counseling/component/NewlyCounselors.less
+++ b/src/features/counseling/component/NewlyCounselors.less
@@ -1,6 +1,6 @@
 @import '~@src/styles/global.less';
 
-.newly-counselors{
+.newly-counselors {
     background-color: #ffffff;
     width: 300px;
     border-radius: @border-radius;
@@ -13,6 +13,10 @@
     height: 50px;
     line-height: 45px;
     border-bottom: 1px solid #f0f2f5;
+
+    .ant-spin {
+        margin-left: 10px;
+    }
 }
 
 .newly-counselors-footer {
@@ -22,6 +26,7 @@
     border-top: 1px solid #f0f2f5;
     text-align: center;
     color: #3169b0;
+    cursor: pointer;
 }
 
 .newly-counselors-content {
@@ -29,33 +34,41 @@
         width: 300px;
         border: #fafafa solid 1px;
     }
+
     .ant-card-body {
-        padding: 20px 10px;;
+        padding: 20px 10px;
+        ;
     }
+
     .ant-avatar {
         width: 60px;
         height: 60px;
     }
+
     .ant-card-meta-detail {
         .ant-card-meta-title {
             height: 24px;
             line-height: 24px;
             margin-bottom: 0;
+
             .name {
                 color: #3169b0;
                 font-size: 16px;
                 font-weight: 400;
             }
+
             .rate {
                 float: right;
                 font-size: 12px;
             }
         }
+
         .ant-card-meta-description {
             .description {
                 font-size: 13px;
                 margin-top: 2px;
             }
+
             .work-years {
                 font-size: 12px;
                 margin-top: 2px;
