--- a/src/features/counseling/component/CounselorsPanel.less
+++ b/src/features/counseling/component/CounselorsPanel.less
@@ -1,7 +1,7 @@
 @import '~@src/styles/global.less';
 
-.counseling-panel {
-    .expert-list-wrapper {
+.counselors-panel {
+    .counselor-list-wrapper {
         margin-top: 30px;
     }
 }
@@ -10,33 +10,52 @@
     background-color: @bg-color-white;
     padding-right: 10px;
     border-radius: @border-radius;
+
     .ant-tag {
         font-size: 14px;
     }
+
     .ant-menu {
         line-height: 60px;
         width: 470px;
     }
+
     .condition-container {
         flex-grow: 1;
         height: 100%;
         display: inline-flex;
         align-items: center;
     }
-    .method, .city {
+
+    .method,
+    .city {
         .condition-container {
             border-bottom: @border-thick;
         }
     }
-    .topic, .method, .city, .isOnline {
+
+    .topic,
+    .method,
+    .city,
+    .isOnline {
         display: flex;
         align-items: center;
         height: 80px;
-        > span:first-of-type {
+
+        >span:first-of-type {
             display: inline-block;
             width: 100px;
             text-align: center;
             font-size: 16px;
+        }
+    }
+
+    .city .anticon {
+        position: absolute;
+
+        svg {
+            height: 12px;
+            width: 12px;
         }
     }
 }
