--- a/src/features/common/component/App.less
+++ b/src/features/common/component/App.less
@@ -1,22 +1,30 @@
 .pcs-app {
+
     // antd layout override
     .ant-layout-header {
         background-color: #fff;
-        position: relative;
+        position: sticky;
+        top: 0;
+        z-index: 99999;
+
         .ant-menu-item {
             padding: 0 30px;
         }
+
         .sign-button-group {
             position: absolute;
             top: 0;
             right: 0;
+
             .ant-btn:first-of-type {
                 right: 75px;
             }
+
             .ant-btn:last-of-type {
                 right: 50px;
             }
         }
+
         .user-viewer {
             position: absolute;
             top: 0;
@@ -26,18 +34,22 @@
             height: 100%;
             justify-content: space-around;
             width: 200px;
+
             .ant-badge {
                 cursor: pointer;
             }
         }
     }
+
     .ant-layout-content {
         margin-top: 30px;
         overflow: scroll;
     }
+
     .ant-layout-footer {
         text-align: center;
     }
+
     .pcs-content {
         min-height: 800px;
         display: flex;
