--- a/src/features/common/component/App.less
+++ b/src/features/common/component/App.less
@@ -6,6 +6,8 @@
         position: sticky;
         top: 0;
         z-index: 99999;
+        height: 65px;
+        line-height: 65px;
 
         .ant-menu-item {
             padding: 0 30px;
@@ -42,7 +44,6 @@
     }
 
     .ant-layout-content {
-        margin-top: 30px;
         overflow: scroll;
     }
 
