--- a/src/features/counseling/component/NewlyCounselors.less
+++ b/src/features/counseling/component/NewlyCounselors.less
@@ -43,6 +43,7 @@
     .ant-avatar {
         width: 60px;
         height: 60px;
+        cursor: pointer;
     }
 
     .ant-card-meta-detail {
@@ -55,6 +56,7 @@
                 color: #3169b0;
                 font-size: 16px;
                 font-weight: 400;
+                cursor: pointer;
             }
 
             .rate {
