--- a/src/features/counseling/component/CounselorList.less
+++ b/src/features/counseling/component/CounselorList.less
@@ -1,4 +1,4 @@
-@import '~@src/styles/global.less';
+@import '~@styles/global.less';
 .query-bar {
     background-color: @bg-color-white;
     display: flex;
