fix: using file loader properly

--- a/src/features/expert/component/Header.less
+++ b/src/features/expert/component/Header.less
@@ -3,7 +3,7 @@
         position: absolute;
         width: 100%;
         height: 232px;
-        background: url("/assets/expert_header_bg.jpg") center center no-repeat;
+        background: url("~@images/expert_header_bg.jpg") center center no-repeat;
     }
 
     .info {
