feat: 留言的一些更改 * 1. 留言改为私信,作为通知的一种 * 2. 私信和通知样式更改 * 3. 可查看并直接回复私信 * 4. 重构App组件,减少子组件不必要的connect,对网络请求和数据刷新控制更为精准

--- a/src/features/common/component/Notification.less
+++ b/src/features/common/component/Notification.less
@@ -22,18 +22,40 @@
         }
     }
 
+    .ant-tabs-tabpane.message {
+        .ant-list-item-action {
+            position: absolute;
+            right: 4px;
+        }
+    }
+
     .ant-list {
         .ant-list-item {
             padding: 12px;
-            .ant-list-item-meta {
-                align-items: center;
+            transition: all .3s;
+
+            &:hover {
+                background: #e6f7ff;
             }
+
+            .ant-list-item-meta-description {
+                text-align: start;
+            }
+
             h4 {
                 text-align: start;
             }
+
             .ant-list-item-action {
                 margin-left: 15px;
             }
+        }
+    }
+
+    .ant-list.overflow {
+        .ant-spin-container {
+            height: 300px;
+            overflow: scroll;
         }
     }
 
@@ -41,18 +63,26 @@
         height: 40px;
         line-height: 40px;
         border-top: 1px solid #e8e8e8;
-        display: flex;
 
-        &>div {
-            width: 50%;
+        &.action1 {
+            display: flex;
 
-            &:hover {
-                color: rgba(0, 0, 0, .85);
+            &>div {
+                width: 50%;
+
+                &:hover {
+                    color: rgba(0, 0, 0, .85);
+                }
+            }
+
+            &>div:first-of-type {
+                border-right: 1px solid #e8e8e8;
             }
         }
 
-        &>div:first-of-type {
-            border-right: 1px solid #e8e8e8;
+        &.action2:hover {
+            color: rgba(0, 0, 0, .85);
         }
+
     }
 }
