--- a/src/features/profile/component/Counselor/CounselingTab.less
+++ b/src/features/profile/component/Counselor/CounselingTab.less
@@ -9,13 +9,10 @@
     .ant-table-thead > tr > th, .ant-table-tbody > tr > td {
         padding: 8px 8px;
     }
-}
 
-.contact-modal {
-    .ant-calendar-picker+.ant-input {
-        margin-top: 10px;
-    }
-    textarea.ant-input {
-        height: 150px;
+    .ant-table-row {
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
