--- a/src/features/profile/component/User/CounselingTab.less
+++ b/src/features/profile/component/User/CounselingTab.less
@@ -2,7 +2,15 @@
     padding: 20px;
 
     .ant-list {
-        margin-right: 50px;
+
+        .ant-list-item {
+            transition: all 0.5s ease-in-out;
+
+            &:hover {
+                cursor: pointer;
+                box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+            }
+        }
     }
 
     .ant-list-item-meta-title>.ant-tag {
