feat: 走通咨询流程处理

--- a/src/features/profile/component/ActionModal.less
+++ b/src/features/profile/component/ActionModal.less
@@ -2,7 +2,21 @@
     .ant-calendar-picker+.ant-input {
         margin-top: 10px;
     }
+
     textarea.ant-input {
         height: 150px;
+    }
+
+    .ant-select {
+        width: 300px;
+
+        &+.ant-input {
+            margin-top: 10px;
+        }
+    }
+
+    .rating,
+    .rating-text {
+        margin-bottom: 10px;
     }
 }
