style: App Content不控制内层样式

--- a/src/features/counseling/Counseling.less
+++ b/src/features/counseling/Counseling.less
@@ -6,7 +6,7 @@
 .pcs-counseling-wrapper {
     margin-top: 30px;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
 }
 
 .pcs-counseling-newly-counselors{
