--- a/src/features/apply/Apply.less
+++ b/src/features/apply/Apply.less
@@ -2,7 +2,7 @@
 
 .pcs-apply {
     width: 850px;
-    margin-top: 30px;
+    margin: 30px auto 0;
 
     .steps-bar {
         background-color: #fff;
