fix: 文章保存和提交的联调

--- a/src/features/article/Article.less
+++ b/src/features/article/Article.less
@@ -2,4 +2,10 @@
     display: flex;
     margin-top: 30px;
     justify-content: center;
+
+    .popular-list {
+        @media screen and (max-width: 800px) {
+            display: none;
+        }
+    }
 }
