--- a/src/features/article/component/ArticlePost.less
+++ b/src/features/article/component/ArticlePost.less
@@ -11,6 +11,54 @@
     background: #fff;
     border-radius: @border-radius;
     margin-top: 40px;
+
+    .title {
+      font-size: 25px;
+      margin-bottom: 10px;
+    }
+
+    .category {
+      color: #000;
+      font-size: 14px;
+    }
+
+    .tags {
+      margin: 5px 0;
+    }
+
+    .infos {
+      display: flex;
+
+      &>div {
+        margin-right: 20px;
+
+        span {
+          padding-right: 5px;
+        }
+      }
+    }
+
+    .author {
+      margin-top: 20px;
+    }
+
+    .operation {
+      display: flex;
+      justify-content: center;
+
+      &>div {
+        text-align: center;
+        cursor: pointer;
+
+        &:first-of-type {
+          margin-right: 50px;
+        }
+
+        svg {
+          font-size: 50px;
+        }
+      }
+    }
   }
 
   // 评论区引用
