feat: 主页初始化

--- a/src/features/home/Home.less
+++ b/src/features/home/Home.less
@@ -1,5 +1,9 @@
 .pcs-home {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+    header {
+        .ant-carousel {
+            .slick-slide h3 {
+                height: 200px;
+            }
+        }
+    }
 }
