--- a/src/features/home/component/ArticleContent.less
+++ b/src/features/home/component/ArticleContent.less
@@ -4,11 +4,12 @@
   .content {
     max-width: 900px;
     margin: 0 auto;
-    padding: 10px;
+    padding: 20px 10px;
 
     .category-bar {
       display: flex;
       align-items: center;
+      position: relative;
 
       .category {
         width: 80px;
@@ -32,9 +33,8 @@
       }
 
       .post-button {
-        padding-right: 10px;
-        flex-grow: 1;
-        text-align: right;
+        position: absolute;
+        right: 20px;
         cursor: pointer;
 
         &:hover {
@@ -47,7 +47,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
-      margin-top: 20px;
+      margin-top: 10px;
 
       .item {
         background-color: #f9f9fa;
@@ -55,6 +55,7 @@
         width: 400px;
         border-radius: 10px;
         margin: 10px;
+        padding: 10px;
 
         .cover {
           align-self: center;
@@ -78,6 +79,10 @@
             &:hover {
               color: #5f5f5f;
             }
+          }
+
+          .excerpt {
+            font-size: 13px;
           }
 
           .tags {
