--- a/src/features/home/component/ArticleContent.less
+++ b/src/features/home/component/ArticleContent.less
@@ -50,12 +50,18 @@
       margin-top: 10px;
 
       .item {
-        background-color: #f9f9fa;
+        background-color: #f0f2f5;;
         display: inline-flex;
         width: 400px;
         border-radius: 10px;
         margin: 10px;
         padding: 10px;
+        cursor: pointer;
+        transition: all .5s;
+
+        &:hover {
+          box-shadow: 0 2px 20px 0 #eaeaea;
+        }
 
         .cover {
           align-self: center;
