--- a/src/features/profile/component/CounselingDetail.less
+++ b/src/features/profile/component/CounselingDetail.less
@@ -2,10 +2,11 @@
     width: 800px;
     display: flex;
     background: #fff;
-    margin-top: 10px;
+    margin: 10px auto 0;
     border-radius: 10px;
     flex-direction: column;
     padding: 20px;
+
 
     .header {
         display: flex;
