--- a/src/features/common/component/Carousel.less
+++ b/src/features/common/component/Carousel.less
@@ -3,13 +3,31 @@
 }
 
 .ant-carousel .slick-slide {
-  text-align: center;
-  height: 250px;
-  line-height: 250px;
-  background: #364d79;
-  overflow: hidden;
-}
 
-.ant-carousel .slick-slide h3 {
-  color: #fff;
+  .slide {
+    width: 100%;
+    height: 300px;
+    background-position: 50%;
+    background-repeat: no-repeat;
+
+    &.slide1 {
+      background-image: url("https://ossimg.xinli001.com/20190522/2306594821bede8fa6ad8165158d5fc9.jpg?x-oss-process=image/quality,Q_80");
+    }
+
+    &.slide2 {
+      background-image: url("https://ossimg.xinli001.com/20190518/7df28887480fd7d08c80568d45405695.jpg?x-oss-process=image/quality,Q_80")
+    }
+
+    &.slide3 {
+      background-image: url("https://ossimg.xinli001.com/20190522/c36c24b596a0f775423cbb34e56cadd7.jpg?x-oss-process=image/quality,Q_80")
+    }
+
+    &.slide4 {
+      background-image: url("https://ossimg.xinli001.com/20190502/0aa3705a77b3ac521a5a8d6ed12ca523.jpg?x-oss-process=image/quality,Q_80")
+    }
+
+    &.slide5 {
+      background-image: url("https://ossimg.xinli001.com/20190520/325362d7ffa57f204a69e9428c2e39e5.png?x-oss-process=image/quality,Q_80")
+    }
+  }
 }
