--- a/src/features/article/component/PopularList.less
+++ b/src/features/article/component/PopularList.less
@@ -41,6 +41,10 @@
         .title {
             margin-bottom: 2px;
             font-size: 15px;
+
+            &:hover {
+                color: #6f6f6f;
+            }
         }
         .excerpt {
             margin-bottom: 2px;
