--- a/src/features/ask/component/Sider.less
+++ b/src/features/ask/component/Sider.less
@@ -20,7 +20,7 @@
   .item1 {
     .content {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
 
       & > div {
         text-align: center;
