--- a/src/features/search/Search.less
+++ b/src/features/search/Search.less
@@ -1,4 +1,5 @@
 .pcs-search {
+  min-height: 700px;
   .search-input,
   h3 {
     margin-top: 10px;
@@ -40,7 +41,8 @@
       width: 600px;
     }
 
-    &.ask, &.article {
+    &.ask,
+    &.article {
       width: 800px;
     }
 
@@ -48,16 +50,6 @@
       left: 50%;
       position: relative;
       top: 50%;
-    }
-
-    .ant-list-item-meta-description {
-      .recent-cmt {
-        background-color: #f0f2f5;
-        display: inline-block;
-        padding: 10px;
-        border-radius: 10px;
-        margin-top: 10px;
-      }
     }
   }
 }
